# ai-esphome

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  GIT_SETUP_COMPLETE.md  Makefile  README.md  docker-compose.yml  opencode.json  pyproject.toml
config/: secrets.yaml.example
config/common/: base.yaml  wifi.yaml
config/common/sensors/: bme280.yaml  dht22.yaml
config/devices/: bedroom-climate.yaml  garage-door-controller.yaml  living-room-sensor.yaml
custom_components/example_component/: README.md  __init__.py  example_component.cpp  example_component.h  sensor.py
docs/: GIT_HOOKS.md  HOOKS_QUICK_REF.md  QUICKSTART.md
hooks/: check-secrets.sh  commit-msg  validate-esphome-configs.sh
