[project]
name = "ai-esphome"
version = "0.1.0"
description = "ESPHome ESP32 multi-device management project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "esphome>=2024.6.0",
]

[dependency-groups]
dev = [
    "ruff>=0.3.0",
    "pre-commit>=3.5.0",
    "yamllint>=1.33.0",
]

[tool.uv]
python-preference = "only-managed"
python-downloads = "automatic"

[tool.uv.pip]
compile-bytecode = true
